kubernetes/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-dashboard-frontend
  namespace: gitlab-dashboard
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-dashboard-frontend
  template:
    metadata:
      labels:
        app: gitlab-dashboard-frontend
    spec:
      containers:
      - name: api-server
        image: gcr.io/oursky-kube/gitlab-dashboard:frontendtrial1.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 70m
            memory: 160Mi
          limits:
            cpu: 110m
            memory: 200Mi
        imagePullPolicy: Always
