kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-dashboard-frontend
  name: gitlab-dashboard-frontend
  namespace: gitlab-dashboard
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector: 
    app: gitlab-dashboard-frontend
  sessionAffinity: None
  type: ClusterIP
